--- a/src/assets/css/material-kit.css
+++ b/src/assets/css/material-kit.css
@@ -14816,3 +14816,8 @@ a:not([href]):not([tabindex]):focus
 .card-footer {
   text-align:right;
 }
+
+
+a.decoration_none {
+  text-decoration: none;
+}
